@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE oval PUBLIC 
-   "-//OVal/OVal Configuration DTD 1.3//EN"
-   "http://oval.sourceforge.net/oval-configuration-1.3.dtd">
-<oval>
+<oval xmlns="http://oval.sf.net/oval-configuration" xmlns:xsi="http://http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://oval.sf.net/oval-configuration http://oval.sourceforge.net/oval-configuration-1.3.xsd">
 
 	<!-- define checks for the net.sf.oval.test.validator.XMLConfigurationTest$User class -->
 	<!-- overwrite=false means already defined checks for this class will not be removed -->
@@ -10,7 +8,9 @@
 		applyFieldConstraintsToSetters="true">
 
 		<object>
-			<assert lang="groovy" message="firstName and lastName must not be the same"><expr>_this.firstName != _this.lastName</expr></assert>
+			<assert lang="groovy" message="firstName and lastName must not be the same">
+				<expr>_this.firstName != _this.lastName</expr>
+			</assert>
 		</object>
 
 		<field name="firstName">
